--- a/css/login.css
+++ b/css/login.css
@@ -24,7 +24,11 @@ body{
   box-shadow: 10px 10px 15px rgba(0,0,0,0.05);
 }
 .center h1{
+  font-size: 2.4rem;
   font-family: 'Pacifico', cursive;
+  background: linear-gradient(120deg,#2980b9, #8e44ad);
+  -webkit-background-clip: text;
+  color: transparent;
   text-align: center;
   padding: 20px 0;
   border-bottom: 1px solid silver;
