--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,24 @@ body {
     overflow: hidden;
 }
  .boxInner img { 
-     width: 100% }
+     
+    height: 200px;
+    }
 
-
+button.deleteBtn:hover {
+  background-color: rgba(112, 112, 112, 0.349);
+  border: 0px;
+}
+button.deleteBtn {
+  cursor: pointer;
+  top: 0;
+  right: 0;
+  position: absolute;
+  padding: 4px 8px;
+  border-radius: 10px;
+  background-color: #ffffff4d;
+  border: 0px;
+}
 @media only screen and (max-width:480px) { 
     /* Smartphone view: 1 tile */
     .box {
